--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nexter",
+  "name": "khrystinka",
   "version": "1.0.0",
-  "description": "nexter",
+  "description": "khrystinka photograpy",
   "main": "index.js",
   "browserslist": [
     ">0.2%",
